// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: ItemBase
message ItemBase
{	
	
	
	repeated ItemBaseDataDefine ItemBaseData = 1; // ItemBaseData

}

// Defined in table: ItemBaseData
message ItemBaseDataDefine
{	
	
	
	optional uint32 Id = 1; // 道具ID
	
	
	optional string Name = 2; // 道具名
	
	
	optional string Desc = 3; // 道具简介
	
	
	optional int32 Sort = 4; // 排序(从小到大,默认最后)
	
	
	optional int32 Type = 5; // 道具类型
	
	
	optional int32 Sold = 6; // 卖出价格元宝

}

